<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:focusable="true"
    android:background="@color/background_app"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:gravity="center"
        android:padding="10dp">

        <ImageView
            android:src="@drawable/navigate_back"
            android:id="@+id/backCreateTaskButton"
            android:layout_width="24dp"
            android:layout_height="24dp" />

        <TextView
            android:textSize="14sp"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/task" />

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:visibility="invisible" />
    </LinearLayout>


    <Space
        android:layout_weight="0.1"
        android:layout_width="0dp"
        android:layout_height="0dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="8dp">

        <TextView
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/name_task"
            android:textSize="14sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nameTaskTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="true"
            android:textColorHint="#BEBEBE"
            app:boxStrokeWidth="1dp"
            app:boxBackgroundColor="#2E2E2E">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nameTaskInputEditText"
                android:layout_width="fill_parent"
                android:layout_height="48dp"
                android:drawablePadding="12dp"
                android:fontFamily="@font/poppins"
                android:hint="@string/example_learn_english"
                android:textColorHint="#BEBEBE" />

        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="12dp"
        android:orientation="vertical"
        android:paddingHorizontal="8dp">

        <TextView
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/description_"
            android:textSize="14sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/descriptionTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="true"
            android:textColorHint="#BEBEBE"
            app:boxBackgroundColor="#2E2E2E">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/descriptionInputEditText"
                android:layout_width="fill_parent"
                android:layout_height="94dp"
                android:drawablePadding="12dp"
                android:gravity="start"
                android:fontFamily="@font/poppins"
                android:hint="@string/for_example_you_can_leave_links_to_important_materials_in_the_description"
                android:textColorHint="#BEBEBE" />

        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="12dp"
        android:orientation="vertical"
        android:paddingHorizontal="8dp">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/choose_an_icon"
                android:textSize="14sp" />

        </LinearLayout>


    </LinearLayout>

    <Space
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="0dp"/>

    <LinearLayout
        android:backgroundTint="@color/primary_color"
        android:layout_margin="8dp"
        android:padding="12dp"
        android:gravity="center"
        android:elevation="3dp"
        android:background="@drawable/standart_button_style"
        android:id="@+id/createTask0Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textColor="@color/white"
            android:textSize="14dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/create_task"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</LinearLayout>