<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/mainLayout"
    android:clickable="true"
    android:focusable="true"
    android:background="@color/background_app"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:gravity="center"
        android:padding="10dp">

        <ImageView
            android:id="@+id/BackButton"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/navigate_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"
            android:text="@string/menu"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:visibility="invisible" />
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:background="@drawable/radius_128"
        app:backgroundTint="@color/white"
        android:layout_width="256dp"
        android:layout_height="256dp">

        <ImageView
            android:src="@drawable/icon_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>


    <TextView
        android:layout_marginTop="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:backgroundTint="@color/button_color_2"
        android:gravity="center"
        android:padding="10dp">

        <ImageView
            android:layout_marginEnd="8dp"
            android:src="@drawable/people_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:layout_weight="1"
                android:fontFamily="@font/poppins"
                android:text="@string/developer"
                android:textColor="@color/white"
                android:textSize="10sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/poppins"
                android:text="@string/developer_name"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/githubSourceButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:backgroundTint="@color/button_color_2"
        android:gravity="center"
        android:padding="10dp">

        <LinearLayout
            android:layout_marginEnd="8dp"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:gravity="center">

            <ImageView
                android:layout_width="21.33dp"
                android:layout_height="21.33dp"
                android:src="@drawable/github" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:layout_weight="1"
                android:fontFamily="@font/poppins"
                android:text="@string/github"
                android:textColor="@color/white"
                android:textSize="10sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/poppins"
                android:text="@string/Source_code"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/supportProjectButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:backgroundTint="@color/button_color_2"
        android:gravity="center"
        android:padding="10dp">

        <ImageView
            android:layout_marginEnd="8dp"
            android:src="@drawable/star_24dp_e8eaed_fill0_wght400_grad0_opsz24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:layout_weight="1"
                android:fontFamily="@font/poppins"
                android:text="@string/support_the_project"
                android:textColor="@color/white"
                android:textSize="10sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/poppins"
                android:text="@string/just_click_the_star_on_the_github_project"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>