<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_app"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top|end"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingLeft="12dp"
        android:paddingTop="10dp"
        android:paddingRight="12dp"
        android:paddingBottom="10dp"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:gravity="center">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/icon_app" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/white" />

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <ImageView
            android:id="@+id/mainMenuButton"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/main_menu_icon" />
    </LinearLayout>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/taskBoardTabLayout"
        android:layout_height="wrap_content"
        app:tabBackground="@color/background_app"
        app:tabGravity="fill"
        app:tabIconTint="@color/white"
        app:tabIndicatorColor="@color/primary_color"
        app:tabIndicatorFullWidth="true"
        app:tabInlineLabel="true"
        app:tabMode="fixed"
        android:layout_width="match_parent"
        app:tabTextColor="@color/white">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/bookmark_icon"
            android:text="@string/to_do" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/done_icon"
            android:text="@string/done" />

    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/taskBoardViewPager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

</LinearLayout>