<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:padding="12dp"
    android:layout_height="match_parent"
    android:background="@drawable/bottom_sheet_background"
    android:orientation="vertical">

    <com.google.android.material.bottomsheet.BottomSheetDragHandleView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:fontFamily="@font/poppins_medium"
        android:layout_marginBottom="12dp"
        android:text="@string/are_you_sure_to_finish_the_task"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/finishTaskButton"
            android:layout_width="0dp"
            android:layout_height="62dp"
            android:layout_weight="1"
            android:background="@drawable/standart_button_style"
            android:backgroundTint="@color/content_background"
            android:elevation="3dp"
            android:gravity="center_vertical">

            <LinearLayout
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/radius_8"
                android:gravity="center">

                <ImageView
                    android:layout_width="12dp"
                    android:layout_height="12dp"
                    android:src="@drawable/finish_icon" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/finish_task"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </LinearLayout>

        <Space
            android:layout_width="12dp"
            android:layout_height="0dp" />

        <LinearLayout
            android:id="@+id/cancelTaskButton"
            android:layout_width="0dp"
            android:layout_height="62dp"
            android:layout_weight="1"
            android:background="@drawable/standart_button_style"
            android:backgroundTint="@color/content_background"
            android:elevation="3dp"
            android:gravity="center_vertical">

            <LinearLayout
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/radius_8"
                android:gravity="center">

                <ImageView
                    android:layout_width="12dp"
                    android:layout_height="12dp"
                    android:src="@drawable/minus_icon" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/cancel"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>